--- a/portfolio/portfolio/scen_sd/scen_sd.html
+++ b/portfolio/portfolio/scen_sd/scen_sd.html
@@ -33,11 +33,11 @@ Name: Qiang Zhang &nbsp Andrew ID: qiangz <br>
   <li><a href="#usecase2">2. Passenger Makes a Car Call</a> </li>
   <ul>
     <li><a href="#scenario2a">Scenario 2A</a> </li>
-    <li><a href="#scenario2b">Scenario 2B</a></li>
+    <li><a href="#scenario2b">Scenario 2B - R-T6</a></li>
   </ul>
   <li><a href="#usecase3">3. Passenger Enters Car</a> </li>
 	<ul>
-    <li><a href="#scenario3a">Scenario 3A</a> </li>
+    <li><a href="#scenario3a">Scenario 3A - R-T6, R-T7</a> </li>
    </ul>
   <li><a href="#usecase4">4. Passenger Exits Car</a> </li>
 	<ul>
@@ -54,7 +54,7 @@ Name: Qiang Zhang &nbsp Andrew ID: qiangz <br>
    </ul>
   <li><a href="#usecase7">7. Determine Car Direction</a> </li>
   <ul>
-    <li><a href="#scenario7a">Scenario 7A</a> </li>
+    <li><a href="#scenario7a">Scenario 7A - R-T8.1, R-T8.2, R-T8.3</a> </li>
     <li><a href="#scenario7b">Scenario 7B</a> </li>
   </ul>
   <li>
@@ -66,7 +66,7 @@ Name: Qiang Zhang &nbsp Andrew ID: qiangz <br>
    </ul>
   <li><a href="#usecase9">9. Cycle Doors</a></li>
 	<ul>
-    <li><a href="#scenario9a">Scenario 9A</a> </li>
+    <li><a href="#scenario9a">Scenario 9A - R-T6</a> </li>
    </ul>
 </ul>
 <div align="center">
