--- a/portfolio/portfolio/traceability/sc_code.html
+++ b/portfolio/portfolio/traceability/sc_code.html
@@ -115,63 +115,87 @@ Traceability peformed by:&nbsp; &lt;Xianle Wang (xianlew)&gt;<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">227<br>
+            <td style="vertical-align: top;">242<br>
             </td>
             <td style="vertical-aligh: top;">T 6.1<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">254<br>
+            <td style="vertical-align: top;">269<br>
             </td>
             <td style="vertical-aligh: top;">T 6.2<br>
             </td>
         </tr>
 		  <tr>
-            <td style="vertical-align: top;">231<br>
+            <td style="vertical-align: top;">246<br>
             </td>
             <td style="vertical-aligh: top;">T 6.3<br>
             </td>
         </tr>
 		  <tr>
-            <td style="vertical-align: top;">290<br>
+            <td style="vertical-align: top;">305<br>
             </td>
             <td style="vertical-aligh: top;">T 6.4<br>
             </td>
         </tr>
 		  <tr>
-            <td style="vertical-align: top;">235<br>
+            <td style="vertical-align: top;">250<br>
             </td>
             <td style="vertical-aligh: top;">T 6.5<br>
             </td>
         </tr>
 		   <tr>
-            <td style="vertical-align: top;">269<br>
+            <td style="vertical-align: top;">284<br>
             </td>
             <td style="vertical-aligh: top;">T 6.6<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">239<br>
+            <td style="vertical-align: top;">254<br>
             </td>
             <td style="vertical-aligh: top;">T 6.7<br>
             </td>
         </tr>
 		  <tr>
-            <td style="vertical-align: top;">316<br>
+            <td style="vertical-align: top;">335<br>
             </td>
             <td style="vertical-aligh: top;">T 6.8<br>
             </td>
         </tr>
 		  <tr>
-            <td style="vertical-align: top;">294<br>
+            <td style="vertical-align: top;">309<br>
             </td>
             <td style="vertical-aligh: top;">T 6.9<br>
             </td>
         </tr>
 		  <tr>
-            <td style="vertical-align: top;">320<br>
+            <td style="vertical-align: top;">339<br>
             </td>
             <td style="vertical-aligh: top;">T 6.10<br>
+            </td>
+        </tr>
+		  <tr>
+            <td style="vertical-align: top;">313<br>
+            </td>
+            <td style="vertical-aligh: top;">T 6.11<br>
+            </td>
+        </tr>
+		  <tr>
+            <td style="vertical-align: top;">365<br>
+            </td>
+            <td style="vertical-aligh: top;">T 6.12<br>
+            </td>
+        </tr>
+		  <tr>
+            <td style="vertical-align: top;">343<br>
+            </td>
+            <td style="vertical-aligh: top;">T 6.13<br>
+            </td>
+        </tr>
+		  <tr>
+            <td style="vertical-align: top;">387<br>
+            </td>
+            <td style="vertical-aligh: top;">T 6.14<br>
             </td>
         </tr>
     </tbody>
