--- a/portfolio/portfolio/reqs/requirements2.html
+++ b/portfolio/portfolio/reqs/requirements2.html
@@ -1096,7 +1096,7 @@
 	<div style="text-align: left; width: 300">
 		<a href="5_door_control.jpg"><img alt="5_door_control.jpg"
 			src="5_door_control.jpg"
-			style="border: 0px solid; width: 818px; height: 470px;"></a><br>
+			style="border: 0px solid; width: 1088px; height: 608px;"></a><br>
 	</div>
 	<!--Insert table for Door Control -->
 	<table style="text-align: left; width: 850;" border="1" cellpadding="2"
@@ -1177,6 +1177,38 @@
 					<br>
 				</td>
 			</tr>
+			<tr>
+				<td style="vertical-align: top;">T5.11<br>
+				</td>
+				<td style="vertical-align: top;">mDoorReversal[b,r]&nbsp;&larr;&nbsp;True
+					<br>
+				</td>
+			</tr>
+			<tr>
+				<td style="vertical-align: top;">T5.12<br>
+				</td>
+				<td style="vertical-align: top;">mCarWeight&nbsp;&gt;=&nbsp;MaxCarCapacity
+					<br>
+				</td>
+			</tr>
+			<tr>
+				<td style="vertical-align: top;">T5.13<br>
+				</td>
+				<td style="vertical-align: top;">mAtFloor[f,
+					b]&nbsp;&larr;&nbsp;True&nbsp;
+					AND&nbsp;f&nbsp;==&nbsp;mDesiredFloor.f&nbsp;
+					AND&nbsp;mDriveSpeed&nbsp;==&nbsp;(0, STOP) <br>
+				</td>
+			</tr>
+			<tr>
+				<td style="vertical-align: top;">T5.14<br>
+				</td>
+				<td style="vertical-align: top;">mAtFloor[f,
+					b]&nbsp;&larr;&nbsp;True&nbsp;
+					AND&nbsp;f&nbsp;==&nbsp;mDesiredFloor.f&nbsp;
+					AND&nbsp;mDriveSpeed&nbsp;==&nbsp;(0, STOP) <br>
+				</td>
+			</tr>
 		</tbody>
 	</table>
 	<!--Door Cotrol table End-->
@@ -1187,7 +1219,7 @@
 		<tbody>
 			<tr>
 				<td style="vertical-align: top;"><br></td>
-				<td style="vertical-align: top;" colspan="15">Requirements<br>
+				<td style="vertical-align: top;" colspan="23">Requirements<br>
 				</td>
 			</tr>
 			<tr>
@@ -1799,6 +1831,124 @@
 				</td>
 				<td style="vertical-align: top;">X<br> <!--5.10.2-->
 				</td>
+				<td style="vertical-align: top;"><br> <!--5.11.1--></td>
+				<td style="vertical-align: top;"><br> <!--5.11.2--></td>
+				<td style="vertical-align: top;"><br> <!--5.11.3--></td>
+				<td style="vertical-align: top;"><br> <!--5.12.1--></td>
+				<td style="vertical-align: top;"><br> <!--5.12.2--></td>
+				<td style="vertical-align: top;"><br> <!--5.12.3--></td>
+				<td style="vertical-align: top;"><br> <!--5.12.4--></td>
+				<td style="vertical-align: top;"><br> <!--5.13.1--></td>
+				<td style="vertical-align: top;"><br> <!--5.13.2--></td>
+				<td style="vertical-align: top;"><br> <!--5.13.3--></td>
+			</tr>
+			<tr>
+				<td style="vertical-align: top;">T5.11<br>
+				</td>
+				<td style="vertical-align: top;"><br> <!--5.6--></td>
+				<td style="vertical-align: top;"><br> <!--5.7.1--></td>
+				<td style="vertical-align: top;"><br> <!--5.7.2--></td>
+				<td style="vertical-align: top;"><br> <!--5.7.3--></td>
+				<td style="vertical-align: top;"><br> <!--5.7.4--></td>
+				<td style="vertical-align: top;"><br> <!--5.8.1--></td>
+				<td style="vertical-align: top;"><br> <!--5.8.2--></td>
+				<td style="vertical-align: top;"><br> <!--5.8.3--></td>
+				<td style="vertical-align: top;"><br> <!--5.9.1--></td>
+				<td style="vertical-align: top;"><br> <!--5.9.2--></td>
+				<td style="vertical-align: top;"><br> <!--5.9.3--></td>
+				<td style="vertical-align: top;"><br> <!--5.10.1--></td>
+				<td style="vertical-align: top;"><br> <!--5.10.2--></td>
+				<td style="vertical-align: top;"><br> <!--5.11.1--></td>
+				<td style="vertical-align: top;"><br> <!--5.11.2--></td>
+				<td style="vertical-align: top;"><br> <!--5.11.3--></td>
+				<td style="vertical-align: top;">X<br> <!--5.12.1--></td>
+				<td style="vertical-align: top;">X<br> <!--5.12.2--></td>
+				<td style="vertical-align: top;">X<br> <!--5.12.3--></td>
+				<td style="vertical-align: top;">X<br> <!--5.12.4--></td>
+				<td style="vertical-align: top;"><br> <!--5.13.1--></td>
+				<td style="vertical-align: top;"><br> <!--5.13.2--></td>
+				<td style="vertical-align: top;"><br> <!--5.13.3--></td>
+			</tr>
+			<tr>
+				<td style="vertical-align: top;">T5.12<br>
+				</td>
+				<td style="vertical-align: top;"><br> <!--5.6--></td>
+				<td style="vertical-align: top;"><br> <!--5.7.1--></td>
+				<td style="vertical-align: top;"><br> <!--5.7.2--></td>
+				<td style="vertical-align: top;"><br> <!--5.7.3--></td>
+				<td style="vertical-align: top;"><br> <!--5.7.4--></td>
+				<td style="vertical-align: top;"><br> <!--5.8.1--></td>
+				<td style="vertical-align: top;"><br> <!--5.8.2--></td>
+				<td style="vertical-align: top;"><br> <!--5.8.3--></td>
+				<td style="vertical-align: top;"><br> <!--5.9.1--></td>
+				<td style="vertical-align: top;"><br> <!--5.9.2--></td>
+				<td style="vertical-align: top;"><br> <!--5.9.3--></td>
+				<td style="vertical-align: top;"><br> <!--5.10.1--></td>
+				<td style="vertical-align: top;"><br> <!--5.10.2--></td>
+				<td style="vertical-align: top;">X<br> <!--5.11.1--></td>
+				<td style="vertical-align: top;">X<br> <!--5.11.2--></td>
+				<td style="vertical-align: top;">X<br> <!--5.11.3--></td>
+				<td style="vertical-align: top;"><br> <!--5.12.1--></td>
+				<td style="vertical-align: top;"><br> <!--5.12.2--></td>
+				<td style="vertical-align: top;"><br> <!--5.12.3--></td>
+				<td style="vertical-align: top;"><br> <!--5.12.4--></td>
+				<td style="vertical-align: top;"><br> <!--5.13.1--></td>
+				<td style="vertical-align: top;"><br> <!--5.13.2--></td>
+				<td style="vertical-align: top;"><br> <!--5.13.3--></td>
+			</tr>
+			<tr>
+				<td style="vertical-align: top;">T5.13<br>
+				</td>
+				<td style="vertical-align: top;">X<br> <!--5.6-->
+				</td>
+				<td style="vertical-align: top;">X<br> <!--5.7.1-->
+				</td>
+				<td style="vertical-align: top;">X<br> <!--5.7.2-->
+				</td>
+				<td style="vertical-align: top;">X<br> <!--5.7.3-->
+				</td>
+				<td style="vertical-align: top;">X<br> <!--5.7.4-->
+				</td>
+				<td style="vertical-align: top;"><br> <!--5.8.1--></td>
+				<td style="vertical-align: top;"><br> <!--5.8.2--></td>
+				<td style="vertical-align: top;"><br> <!--5.8.3--></td>
+				<td style="vertical-align: top;"><br> <!--5.9.1--></td>
+				<td style="vertical-align: top;"><br> <!--5.9.2--></td>
+				<td style="vertical-align: top;"><br> <!--5.9.3--></td>
+				<td style="vertical-align: top;"><br> <!--5.10.1--></td>
+				<td style="vertical-align: top;"><br> <!--5.10.2--></td>
+				<td style="vertical-align: top;"><br> <!--5.11.1--></td>
+				<td style="vertical-align: top;"><br> <!--5.11.2--></td>
+				<td style="vertical-align: top;"><br> <!--5.11.3--></td>
+				<td style="vertical-align: top;"><br> <!--5.12.1--></td>
+				<td style="vertical-align: top;"><br> <!--5.12.2--></td>
+				<td style="vertical-align: top;"><br> <!--5.12.3--></td>
+				<td style="vertical-align: top;"><br> <!--5.12.4--></td>
+				<td style="vertical-align: top;"><br> <!--5.13.1--></td>
+				<td style="vertical-align: top;"><br> <!--5.13.2--></td>
+				<td style="vertical-align: top;"><br> <!--5.13.3--></td>
+			</tr>
+			<tr>
+				<td style="vertical-align: top;">T5.14<br>
+				</td>
+				<td style="vertical-align: top;">X<br> <!--5.6-->
+				</td>
+				<td style="vertical-align: top;">X<br> <!--5.7.1-->
+				</td>
+				<td style="vertical-align: top;">X<br> <!--5.7.2-->
+				</td>
+				<td style="vertical-align: top;">X<br> <!--5.7.3-->
+				</td>
+				<td style="vertical-align: top;">X<br> <!--5.7.4-->
+				</td>
+				<td style="vertical-align: top;"><br> <!--5.8.1--></td>
+				<td style="vertical-align: top;"><br> <!--5.8.2--></td>
+				<td style="vertical-align: top;"><br> <!--5.8.3--></td>
+				<td style="vertical-align: top;"><br> <!--5.9.1--></td>
+				<td style="vertical-align: top;"><br> <!--5.9.2--></td>
+				<td style="vertical-align: top;"><br> <!--5.9.3--></td>
+				<td style="vertical-align: top;"><br> <!--5.10.1--></td>
+				<td style="vertical-align: top;"><br> <!--5.10.2--></td>
 				<td style="vertical-align: top;"><br> <!--5.11.1--></td>
 				<td style="vertical-align: top;"><br> <!--5.11.2--></td>
 				<td style="vertical-align: top;"><br> <!--5.11.3--></td>
