--- a/portfolio/portfolio/traceability/req_const_traceability.html
+++ b/portfolio/portfolio/traceability/req_const_traceability.html
@@ -886,7 +886,7 @@ direction<br>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">10.4 At new floor --> CarPositionIndicator display current floor </td>
+      <td style="vertical-align: top;">10.4 Set CarPositionIndicator to nearest floor </td>
       <td style="vertical-align: top;">X<br>
       </td>
       <td style="vertical-align: top;">X<br>
