--- a/portfolio/portfolio/reqs/requirements2.html
+++ b/portfolio/portfolio/reqs/requirements2.html
@@ -4050,7 +4050,7 @@
 	<div style="text-align: center;">
 		<a href="dispatcher_state_diagram.png"><img
 			alt="dispatcher_state_diagram.png" src="dispatcher_state_diagram.png"
-			style="border: 0px solid; width: 513px; height: 400px;"></a><br>
+			style="border: 0px solid; width: 800px; height: 600px;"></a><br>
 	</div>
 	<table style="text-align: left; width: 800px;" border="1"
 		cellpadding="2" cellspacing="2">
@@ -4076,7 +4076,7 @@
 				<td style="vertical-align: top;">T11.3<br>
 				</td>
 				<td style="vertical-align: top;">mDoorClosed [b, r]&larr; False
-					AND currentFloor &larr;mDesiredFloor<br>
+					AND currentFloor != mDesiredFloor<br>
 				</td>
 			</tr>
             <tr>
@@ -4084,6 +4084,20 @@
                 </td>
                 <td style="vertical-align: top;">mDoorClosed [b, r]&larr; False
                     AND currentFloor &larr;mDesiredFloor<br>
+                </td>
+            </tr>
+            <tr>
+                <td style="vertical-align: top;">T11.5<br>
+                </td>
+                <td style="vertical-align: top;">mDoorClosed [b, r]&larr; False
+                    AND currentFloor &larr;mDesiredFloor<br>
+                </td>
+            </tr>
+            <tr>
+                <td style="vertical-align: top;">T11.6<br>
+                </td>
+                <td style="vertical-align: top;">mDoorClosed [b, r]&larr; True
+                    AND currentFloor != mDesiredFloor<br>
                 </td>
             </tr>
 		</tbody>
@@ -4230,6 +4244,72 @@
                 <td style="vertical-align: top;"><br>
                 </td>
 			</tr>
+            <tr>
+                <td style="vertical-align: top;">S11.4 REACH<br>
+                </td>
+
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;"><br></td>
+                <td style="vertical-align: top;"><br></td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                 <td style="vertical-align: top;"><br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;"><br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+            </tr>
+            <tr>
+                <td style="vertical-align: top;">S11.5 LEAVE<br>
+                </td>
+
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;"><br></td>
+                <td style="vertical-align: top;"><br></td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                 <td style="vertical-align: top;"><br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+            </tr>
 			<tr>
 				<td style="vertical-align: top;">Transitions<br>
 				</td>
@@ -4372,6 +4452,64 @@
                 <td style="vertical-align: top;"><br>
                 </td>
                 <td style="vertical-align: top;"><br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;"><br>
+                </td>
+                <td style="vertical-align: top;"><br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+            </tr>
+            <tr>
+                <td style="vertical-align: top;">T11.5 <br>
+                </td>
+                <td style="vertical-align: top;"><br></td>
+                <td style="vertical-align: top;"><br></td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;"><br></td>
+                <td style="vertical-align: top;"><br></td>
+                <td style="vertical-align: top;"><br></td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                 <td style="vertical-align: top;"><br>
+                </td>
+                <td style="vertical-align: top;"><br>
+                </td>
+                <td style="vertical-align: top;"><br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+            </tr>
+            <tr>
+                <td style="vertical-align: top;">T11.6 <br>
+                </td>
+                <td style="vertical-align: top;"><br></td>
+                <td style="vertical-align: top;"><br></td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;">X<br></td>
+                <td style="vertical-align: top;">X<br></td>
+                <td style="vertical-align: top;">X<br></td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                 <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;">X<br>
+                </td>
+                <td style="vertical-align: top;">X<br>
                 </td>
                 <td style="vertical-align: top;">X<br>
                 </td>
