--- a/portfolio/portfolio/portfolio.html
+++ b/portfolio/portfolio/portfolio.html
@@ -97,7 +97,7 @@
 		<li>Scheduling</li>
 		<ul>
 			<li><a href="network_schedule/network_schedule.html">Network
-					Schedule</a> - &lt;description here&gt;</li>
+					Schedule</a> - This log will allow you to quickly see what changes have been make on network schedule and their content.</li>
 		</ul>
 		<li>Fault Tolerance</li>
 		<ul>
