--- a/portfolio/portfolio/elevatorcontrol/package.html
+++ b/portfolio/portfolio/elevatorcontrol/package.html
@@ -44,8 +44,7 @@ of the latest required simulator release.</span><br>
 </ul>
 <h2>Utility files</h2>
 <ul>
-  <li><a href="Utility.java">Utility.java</a> - add a description and
-update the filename link</li>
+  <li><a href="Utility.java">Utility.java</a> - CallArray class/ DoorClosedArray class/ NearestFloor class/ AtFloorArray class</li>
   <li>...<br>
   </li>
 </ul>
