--- a/portfolio/portfolio/network_schedule/network_schedule.html
+++ b/portfolio/portfolio/network_schedule/network_schedule.html
@@ -17,9 +17,10 @@
     <h2>
         CAN Message Dictionary<br>
     </h2>
-    Add a summary here
+    The CAN Message Dictionary contains all the controller and module messages. <br>
+    The CAN ID assignment could show the priority of the message. Message with lower period has higher priority and smaller CAN ID. 
     <br>
-    <br> Message Dictionary Table
+    
     <br>
 <table x:str="" style="border-collapse: collapse; width: 100%;"
         border="1" cellpadding="5" cellspacing="0">
@@ -319,8 +320,8 @@
     </table>
     
     <br>
-    <h2>Network Schedule Analaysis</h2>
-    <br> Add a summary here
+    <h2>Network Schedule Analysis</h2>
+    <br> The Network Schedule Analysis table contains the detail of however data is stored in the payload of each message.
     <br>
 <TABLE CELLSPACING="0" COLS="20" BORDER="0">
     <COLGROUP WIDTH="168"></COLGROUP>
@@ -336,7 +337,7 @@
     <COLGROUP WIDTH="84"></COLGROUP>
     <COLGROUP SPAN="2" WIDTH="66"></COLGROUP>
     <TR>
-        <TD HEIGHT="17" ALIGN="LEFT">Network Analysis</TD>
+        <TD HEIGHT="17" ALIGN="LEFT"></TD>
         <TD ALIGN="LEFT"><BR></TD>
         <TD ALIGN="LEFT"><BR></TD>
         <TD ALIGN="LEFT"><BR></TD>
