--- a/portfolio/portfolio/elevatorcontrol/package.html
+++ b/portfolio/portfolio/elevatorcontrol/package.html
@@ -33,6 +33,12 @@ of the latest required simulator release.</span><br>
 <ul>
   <li><a href="DriveSpeedCanPayloadTranslator.java">DriveSpeedCanPayloadTranslator.java</a> - the translator for DriveSpeed</li>
   <li><a href="DoorMotorCanPayloadTranslator.java">DoorMotorCanPayloadTranslator.java</a> - the translator for DoorMotor</li>
+  <li><a href="CarCallCanPayloadTranslator.java">CarCallCanPayloadTranslator.java</a> - the translator for CarCall</li>
+  <li><a href="CarLanternCanPayloadTranslator.java">CarLanternCanPayloadTranslator.java</a> - the translator for CarLantern</li>
+  <li><a href="CarLightCanPayloadTranslator.java">CarLightCanPayloadTranslator.java</a> - the translator for CarLight</li>
+  <li><a href="DesiredDwellCanPayloadTranslator.java">DesiredDwellCanPayloadTranslator.java</a> - the translator for DesiredDwell</li>
+  <li><a href="DesiredFloorCanPayloadTranslator.java">DesiredFloorCanPayloadTranslator.java</a> - the translator for DesiredFloor</li>
+
   <li>...<br>
   </li>
 </ul>
