--- a/portfolio/portfolio/elevatorcontrol/package.html
+++ b/portfolio/portfolio/elevatorcontrol/package.html
@@ -38,6 +38,9 @@ of the latest required simulator release.</span><br>
   <li><a href="CarLightCanPayloadTranslator.java">CarLightCanPayloadTranslator.java</a> - the translator for CarLight</li>
   <li><a href="DesiredDwellCanPayloadTranslator.java">DesiredDwellCanPayloadTranslator.java</a> - the translator for DesiredDwell</li>
   <li><a href="DesiredFloorCanPayloadTranslator.java">DesiredFloorCanPayloadTranslator.java</a> - the translator for DesiredFloor</li>
+<li><a href="DriveCommandCanPayloadTranslator.java">DriveCommandCanPayloadTranslator.java</a> - the translator for DriveCommand</li>
+
+
 
   <li>...<br>
   </li>
