--- a/portfolio/portfolio/traceability/sc_code.html
+++ b/portfolio/portfolio/traceability/sc_code.html
@@ -30,43 +30,43 @@ Traceability peformed by:&nbsp; &lt;Shen Yu (sheny)&gt;<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">123<br>
+            <td style="vertical-align: top;">138<br>
             </td>
             <td style="vertical-aligh: top;">T 5.1<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">130<br>
+            <td style="vertical-align: top;">150<br>
             </td>
             <td style="vertical-aligh: top;">T 5.6<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">141<br>
+            <td style="vertical-align: top;">161<br>
             </td>
             <td style="vertical-aligh: top;">T 5.2<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">155<br>
+            <td style="vertical-align: top;">175<br>
             </td>
             <td style="vertical-aligh: top;">T 5.3<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">166<br>
+            <td style="vertical-align: top;">187<br>
             </td>
             <td style="vertical-aligh: top;">T 5.4<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">170<br>
+            <td style="vertical-align: top;">192<br>
             </td>
             <td style="vertical-aligh: top;">T 5.5<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">174<br>
+            <td style="vertical-align: top;">196<br>
             </td>
             <td style="vertical-aligh: top;">T 5.7<br>
             </td>
@@ -78,37 +78,37 @@ Traceability peformed by:&nbsp; &lt;Shen Yu (sheny)&gt;<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">190<br>
+            <td style="vertical-align: top;">212<br>
             </td>
             <td style="vertical-aligh: top;">T 5.8<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">204<br>
+            <td style="vertical-align: top;">226<br>
             </td>
             <td style="vertical-aligh: top;">T 5.9<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">215<br>
+            <td style="vertical-align: top;">237<br>
             </td>
             <td style="vertical-aligh: top;">T 5.10<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">219<br>
+            <td style="vertical-align: top;">242<br>
             </td>
             <td style="vertical-aligh: top;">T 5.11<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">223<br>
+            <td style="vertical-align: top;">246<br>
             </td>
             <td style="vertical-aligh: top;">T 5.12<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">227<br>
+            <td style="vertical-align: top;">250<br>
             </td>
             <td style="vertical-aligh: top;">T 5.14<br>
             </td>
@@ -349,27 +349,39 @@ Traceability peformed by:&nbsp; &lt;Qiang Zhang (qiangz)&gt;<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">176<br>
+            <td style="vertical-align: top;">179<br>
             </td>
             <td style="vertical-aligh: top;">T 11.1<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">192<br>
+            <td style="vertical-align: top;">196,221,240<br>
             </td>
             <td style="vertical-aligh: top;">T 11.2<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">186<br>
+            <td style="vertical-align: top;">173,190,215,237<br>
             </td>
             <td style="vertical-aligh: top;">T 11.3<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">170<br>
+            <td style="vertical-align: top;">200<br>
             </td>
             <td style="vertical-aligh: top;">T 11.4<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">243<br>
+            </td>
+            <td style="vertical-aligh: top;">T 11.5<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">224<br>
+            </td>
+            <td style="vertical-aligh: top;">T 11.6<br>
             </td>
         </tr>
     </tbody>
