--- a/portfolio/portfolio/network_schedule/network_schedule.html
+++ b/portfolio/portfolio/network_schedule/network_schedule.html
@@ -890,6 +890,26 @@
         200000 * 0.912 = 182400 bps<br>
 The best-case value we predicted is 157450 bps and the worst-case value is 189890 bps. So the actual bandwidth used 
 is between the best- and worst-case values predicted by our analysis.<br>
+The following is one of the result of my acceptance test: <br>
+<br>
+Passenger Delivery Summary<br>
+Delivered: 61<br>
+Stranded: 0<br>
+Total: 61<br>
+<br>
+Deliver Stats (lower is better):<br>
+Average_delivery_time: 336.738<br>
+Maximum_delivery_time:  861.047<br>
+Delivery_performance_score:  2207.998<br>
+<br>
+Satisfaction Stats (higher is better):<br>
+Average_satisfaction_score: 99.344<br>
+Min_satisfaction_score:  80.000<br>
+Satisfaction_performance_score:  477.377<br>
+<br>
+
+Network Utilization Summary:<br>
+Recent: 91.20 % Max: 91.20 %  Overall:  91.20 %
 <br>
 
 
