--- a/portfolio/portfolio/elevatorcontrol/package.html
+++ b/portfolio/portfolio/elevatorcontrol/package.html
@@ -39,8 +39,8 @@ of the latest required simulator release.</span><br>
   <li><a href="DesiredDwellCanPayloadTranslator.java">DesiredDwellCanPayloadTranslator.java</a> - the translator for DesiredDwell</li>
   <li><a href="DesiredFloorCanPayloadTranslator.java">DesiredFloorCanPayloadTranslator.java</a> - the translator for DesiredFloor</li>
 <li><a href="DriveCommandCanPayloadTranslator.java">DriveCommandCanPayloadTranslator.java</a> - the translator for DriveCommand</li>
-
-
+<li><a href="HallCallCanPayloadTranslator.java">HallCallCanPayloadTranslator.java</a> - the translator for HallCall</li>
+<li><a href="HallLightCanPayloadTranslator.java">HallLightCanPayloadTranslator.java</a> - the translator for HallLight</li>
 
   <li>...<br>
   </li>
