--- a/portfolio/portfolio/verify/verfication.html
+++ b/portfolio/portfolio/verify/verfication.html
@@ -19,6 +19,17 @@ Verification<br>
 <h2>Verification Framework Description<br>
 </h2>
 Add description of verification approach here<br>
+For high level requirement R-T6, the Runtime Monitor should check whether the car 
+stops at floors that have no pending calls. The monitor shall throw a warning every 
+time the motor was commanded to stop while there are not pending calls at CurrentFloor. 
+The statechart for high level requirement R-T6 is: <br>
+<div style="text-align: center;">
+		<a href="R-T6-statechart.png"><img
+			alt="R-T6-statechart.png"
+			src="R-T6-statechart.png"
+			style="border: 0px solid; width: 750px; height: 369px;"></a><br>
+</div>
+
 <br>
 <h2>Verification Instructions</h2>
 <br>
