--- a/portfolio/portfolio/verify/verfication.html
+++ b/portfolio/portfolio/verify/verfication.html
@@ -43,6 +43,15 @@ For high-level requirement RT9, the invalid state is the car is moving too slow 
 </div>
 
 <br>
+For RT-10, doors are only commanded to nudge after door reversal is triggered before. Thus, the invalid state would happen when doors are commanded to nudge when no door reversal triggered before.
+<h2></h2>
+<div style="text-align: center;">
+		<a href="RT-10-statechart.jpg"><img
+			alt="RT-10-statechart.jpg"
+			src="RT-10-statechart.jpg"
+			style="border: 0px solid; width: 865px; height: 503px;"></a><br>
+</div>
+<br>
 <h2>Verification Instructions</h2>
 <br>
 Add instructions here<br>
