--- a/portfolio/portfolio/verify/verfication.html
+++ b/portfolio/portfolio/verify/verfication.html
@@ -44,6 +44,43 @@ The statechart for high level requirement R-T7 is: <br>
 			src="R-T7-statechart.png"
 			style="border: 0px solid; width: 782px; height: 380px;"></a><br>
 </div>
+<!--Qiang R8_1-->
+<br>
+For high-level requirement RT8-1:
+At first, the monitor is in “Lantern Off” state. 
+1. If door is not closed and there are pending calls at other floors. The car lantern will be turn on based on the target floor compared with current floor. This is the correct implementation.
+2. If door is not closed and there are no pending calls at other floors. If the car lantern is turn on, then this is the wrong implementation. The monitor should show some warnings to the tester.
+<br>
+<div style="text-align: center;">
+		<a href="R8_1.jpg"><img
+			alt="R8_1.jpg"
+			src="R8_1.jpg"
+			style="border: 0px solid; width: 840px; height: 310px;"></a><br>
+</div>
+<br>
+For high-level requirement RT8-2:
+At first, the monitor is in “Lantern Off” state.
+1. If door is opening and Desired Direction is up, it means the car will keep going up after it stops at this floor. So lantern[up] is on. In this case, if lantern[down] is turned on before door closed. Then it is a wrong implementation.
+2. If door is opening and Desired Direction is down, it means the car will keep going down after it stops at this floor. So lantern[down] is on. In this case, if lantern[up] is turned on before door closed. Then it is a wrong implementation.
+<br>
+<div style="text-align: center;">
+		<a href="R8_2.jpg"><img
+			alt="R8_2.jpg"
+			src="R8_2.jpg"
+			style="border: 0px solid; width: 800px; height: 430px;"></a><br>
+</div>
+<br>
+For high-level requirement RT8-3:
+At first, the monitor is in “Lantern Off” state.
+1. If door is opening and Desired Direction is up, it means the car will keep going up after it stops at this floor. So If the target floor is smaller or equal to current floor, then it means the car lantern indicates the wrong direction. So the implementation is wrong.
+2. If door is opening and Desired Direction is down, it means the car will keep going down after it stops at this floor. So If the target floor is larger or equal to current floor, then it means the car lantern indicates the wrong direction. So the implementation is wrong.
+<br>
+<div style="text-align: center;">
+		<a href="R8_3.jpg"><img
+			alt="R8_3.jpg"
+			src="R8_3.jpg"
+			style="border: 0px solid; width: 821px; height: 520px;"></a><br>
+</div>
 <br>
 For high-level requirement RT9, the invalid state is the car is moving too slow when it’s supposed to be moving faster. The car will travel about 0.04m after leaving a certain floor and moving in slow speed. Thus, if the car speed is less than 0.25m/s under the condition that mCarLevelPosition is still quite far away from desired floor (e.g. more than 1 meter), it is moving too slow and a warning should be issued.
 <h2></h2>
