--- a/portfolio/portfolio/verify/verfication.html
+++ b/portfolio/portfolio/verify/verfication.html
@@ -82,7 +82,7 @@ At first, the monitor is in “Lantern Off” state.
 			style="border: 0px solid; width: 821px; height: 520px;"></a><br>
 </div>
 <br>
-For high-level requirement RT9, the invalid state is the car is moving too slow when it’s supposed to be moving faster. The car will travel about 0.04m after leaving a certain floor and moving in slow speed. Thus, if the car speed is less than 0.25m/s under the condition that mCarLevelPosition is still quite far away from desired floor (e.g. more than 1 meter), it is moving too slow and a warning should be issued.
+For high-level requirement RT9, the invalid state is the car is moving too slow when it's supposed to be moving faster. The car will travel about 0.04m after leaving a certain floor and moving in slow speed. Thus, if the car speed is less than 0.25m/s under the condition that mCarLevelPosition is still quite far away from desired floor (e.g. more than 1 meter), it is moving too slow and a warning should be issued.
 <h2></h2>
 <br>
 <div style="text-align: center;">
