--- a/portfolio/portfolio/portfolio.html
+++ b/portfolio/portfolio/portfolio.html
@@ -109,7 +109,7 @@
 		<li>Verification</li>
 		<ul>
 			<li><a href="verify/verfication.html">High Level
-					Requirements Verification Framework</a> - &lt;description here&gt;</li>
+					Requirements Verification Framework</a> - Use Runtime Monitor to check whether the behavior of the elevator meets high level requirements.</li>
 		</ul>
 		<li>Presentations</li>
 		<ul>
