--- a/portfolio/portfolio/elevatorcontrol/package.html
+++ b/portfolio/portfolio/elevatorcontrol/package.html
@@ -48,7 +48,9 @@ of the latest required simulator release.</span><br>
 <h2>Monitor files</h2>
 <ul>
     <li><a href="Proj7RuntimeMonitor.java">Proj7RuntimeMonitor.java</a> - the Monitor for Overweight, Waste Opening, Reversal</li>
-    <li>...<br>
+    <li><a href="Proj11RuntimeMonitor.java">Proj11RuntimeMonitor.java</a> - the Monitor for Overweight, Waste Opening, Reversal
+    Also monitor the high level requirements R-T6, R-T7, R-T8, R-T9, R-T10</li>
+<br>
     </li>
 </ul>
 <h2>Utility files</h2>
