--- a/portfolio/portfolio/integration_test/integration_test_log.html
+++ b/portfolio/portfolio/integration_test/integration_test_log.html
@@ -8,7 +8,7 @@
 <body>
 <h1 style="text-align: center;">18649 - Integration Test Log<br>
 </h1>
-<hr style="width: 100%; height: 2px;">18649 &lt;semester&gt;<br>
+<hr style="width: 100%; height: 2px;">18649 Fall 2013<br>
 Group 17: <br>
 Xianle Wang/xianlew <br>
 Shen Yu/sheny <br>
